# termtweet

./: .env.example  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tweet.py
.github/workflows/: publish.yml  test.yml
termtweet/: __init__.py  cli.py  core.py
tests/: __init__.py  test_basic.py
