[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termtweet"
version = "1.0.0"
description = "A simple CLI tool to tweet from your terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "TermTweet", email = "info@termtweet.dev"},
]
maintainers = [
    {name = "TermTweet Team", email = "info@termtweet.dev"},
]
keywords = ["twitter", "cli", "terminal", "tweet", "social-media", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Utilities",
]
dependencies = [
    "tweepy>=4.14.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/termtweet"
Documentation = "https://github.com/yourusername/termtweet#readme"
Repository = "https://github.com/yourusername/termtweet"
Issues = "https://github.com/yourusername/termtweet/issues"
Changelog = "https://github.com/yourusername/termtweet/blob/main/CHANGELOG.md"

[project.scripts]
termtweet = "termtweet.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.setuptools.package-data]
termtweet = ["*.md", "*.txt"]